--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
 <footer class="site-footer">
-
+  <!--a sticky footer is that it “sticks” to the bottom of the browser window-->
   <div class="wrapper">
-
+    <!--
+    <style>
+      h3 {text-align: center;}
+    </style>
     <h3 class="footer-heading">{{ site.title }}</h3>
-
+    -->
     <div class="site-navigation">
 
       <p><strong>Site Map</strong></p>
@@ -41,9 +44,20 @@
       <p><strong>Join us!</strong></p>
       <p class="text">Looking for exceptional talent and curious minds!</p>
     </div>
-
+    
   </div>
 
+  <!-- Footer Text -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center text-light small ml-2 py-3" style="font-family: 'Quicksand', sans-serif;">© 2020 Test | <a href="?p=privacidade" class="link" style="font-family: 'Quicksand', sans-serif;"> Department of xx | Uni.</a>
+  </div>
+  <hr>
+  <style>
+    h3 {text-align: center;}
+  </style>
+  <h3 class="copyright">© 2020 Test | ccc</h3>
+  <!-- Copyright -->
 </footer>
 
 <!-- Scripts -->
