--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,9 +54,9 @@
   </div>
   <hr>
   <style>
-    h3 {text-align: center;}
+    p {text-align: center;}
   </style>
-  <h3 class="copyright">© 2020 Test | ccc</h3>
+  <p class="copyright">© 2020 Test | ccc</p>
   <!-- Copyright -->
 </footer>
 
