--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
   <!-- Footer Text -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center text-light small ml-2 py-3" style="font-family: 'Quicksand', sans-serif;">© 2020 Test | <a href="?p=privacidade" class="link" style="font-family: 'Quicksand', sans-serif;"> Department of xx | Uni.</a>
+  <div align="center" class="footer-copyright text-center text-light small ml-2 py-3" style="font-family: 'Quicksand', sans-serif;">© 2020 Test | <a href="?p=privacidade" class="link" style="font-family: 'Quicksand', sans-serif;"> Department of xx | Uni.</a>
   </div>
 
   <!-- Copyright -->
