--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,9 +48,9 @@
   </div>
 
   <!-- Footer Text -->
-
+  <br>
   <!-- Copyright -->
-  <div align="center" class="footer-copyright text-center text-light small ml-2 py-3" style="color:black; font-family: 'Quicksand', sans-serif;">© 2020 Test | <a href="?p=privacidade" class="link" style="color:black; font-family: 'Quicksand', sans-serif;"> Department of xx</a> | <a href="">Uni.</a>
+  <div align="center" class="footer-copyright text-center text-light small ml-2 py-3" style="color:black; font-family:verdana;font-weight:bold">© 2020 Test | <a href="?p=privacidade" class="link" style="color:black; font-family:verdana;"> Department of xx</a> | <a href="">Uni.</a>
   </div>
 
   <!-- Copyright -->
