--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
           </a>
         </li>
 
-        {% for social in site.social %}
+        {% for social in site.data.social-media %}
           {% if social.url != "" %}
           <li>
             <a href="{{ social.url }}" title="{{ social.desc }}">
