--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
   <!-- Footer Text -->
   <br>
   <!-- Copyright -->
-  <div align="center" class="footer-copyright text-center text-light small ml-2 py-3" style="color:black; font-family:verdana;font-weight:bold">Copyright © 2020 Liguang Jiang | <a href="?p=privacidade" class="link" style="color:black; font-family:verdana;"> Department of xx</a> | <a href="">Uni.</a>
+  <div align="center" class="footer-copyright text-center text-light small ml-2 py-3" style="color:black; font-family:verdana;font-weight:bold">© 2020 ROSY Group | <a href="https://ese.sustech.edu.cn/en/" class="link" style="color:black; font-family:verdana;"> School of Environmental Science & Engineering</a> | <a href="https://www.sustech.edu.cn/en/" class="link" style="color:black; font-family:verdana;">Southern University of Science and Technology</a>
   </div>
 
   <!-- Copyright -->
