--- a/_layouts/photo_set.html
+++ b/_layouts/photo_set.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign num = page.photos.size %}
 
-<h1>{{ page.title }}</h1>
+{% <h1>{{ page.title }}</h1> %}
 <ul>
   {% for i in (1..num) %}
   <li>
