--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
 
     <div class="site-signature">
       <p><strong>Join us!</strong></p>
-      <p class="text">Looking for exceptional talent and curious minds! Contact Dr. Jiang if you are interested in remote sensing, hydrology, modeling, etc.</p>
+      <p class="text">Looking for exceptional talents and curious minds! Contact Dr. Jiang if you are interested in remote sensing, hydrology, modeling, etc.</p>
     </div>
     
   </div>
